--- a/Analysis-on-Iris-Data/Iris_EDA.ipynb
+++ b/Analysis-on-Iris-Data/Iris_EDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Iris-EDA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO5n1uNFBkfKRX5UKLrCljD",
+      "authorship_tag": "ABX9TyO/9RfAvL+IbXQ7iSp7XR9P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,14 +57,14 @@
       "metadata": {
         "id": "kmube6WPbtIT",
         "colab_type": "code",
+        "outputId": "0235e801-d813-4e77-ef16-e59bcd27ddce",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "9c96c575-ea3f-4e60-d026-66dddb048f4e"
+          "height": 359
+        }
       },
       "source": [
-        "data.head()"
+        "data.head(10)"
       ],
       "execution_count": 3,
       "outputs": [
@@ -138,6 +138,46 @@
               "      <td>0.2</td>\n",
               "      <td>Iris-setosa</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>5.2</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>3.9</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>6.0</td>\n",
+              "      <td>2.2</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>5.8</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>4.1</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>6.3</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>5.6</td>\n",
+              "      <td>2.4</td>\n",
+              "      <td>Iris-virginica</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -148,7 +188,12 @@
               "1           5.7          2.5           5.0          2.0   Iris-virginica\n",
               "2           6.5          2.8           4.6          1.5  Iris-versicolor\n",
               "3           5.1          3.7           1.5          0.4      Iris-setosa\n",
-              "4           4.4          3.0           1.3          0.2      Iris-setosa"
+              "4           4.4          3.0           1.3          0.2      Iris-setosa\n",
+              "5           5.2          2.7           3.9          1.4  Iris-versicolor\n",
+              "6           6.0          2.2           5.0          1.5   Iris-virginica\n",
+              "7           4.9          3.0           1.4          0.2      Iris-setosa\n",
+              "8           5.8          2.7           4.1          1.0  Iris-versicolor\n",
+              "9           6.3          3.4           5.6          2.4   Iris-virginica"
             ]
           },
           "metadata": {
@@ -163,16 +208,16 @@
       "metadata": {
         "id": "883AOIZdpG4W",
         "colab_type": "code",
+        "outputId": "a4040ede-c923-4235-a2c0-681177e5e134",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        },
-        "outputId": "a4040ede-c923-4235-a2c0-681177e5e134"
+        }
       },
       "source": [
         "data.describe()"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,17 +332,17 @@
       "metadata": {
         "id": "VfW8bEglcdJI",
         "colab_type": "code",
+        "outputId": "39c55203-93c3-4218-90cb-771fd9f52fc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 382
-        },
-        "outputId": "39c55203-93c3-4218-90cb-771fd9f52fc4"
+        }
       },
       "source": [
         "sns.set() \n",
         "sns.lmplot(x = 'sepal-length', y = 'petal-length', data = data, hue = 'class', palette='Set2')"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -330,16 +375,16 @@
       "metadata": {
         "id": "_pX4EE3Rcso-",
         "colab_type": "code",
+        "outputId": "ea45513e-5a9c-46f7-970c-eadd92629519",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 382
-        },
-        "outputId": "ea45513e-5a9c-46f7-970c-eadd92629519"
+        }
       },
       "source": [
         "sns.lmplot(x = 'sepal-length', y = 'petal-length', data = data, hue = 'class', palette='Set2', fit_reg = False)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,16 +417,16 @@
       "metadata": {
         "id": "MIJAlXxahmwn",
         "colab_type": "code",
+        "outputId": "64c35b65-873d-4e75-c31e-5b4627d80714",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 764
-        },
-        "outputId": "64c35b65-873d-4e75-c31e-5b4627d80714"
+        }
       },
       "source": [
         "sns.pairplot(data = data, hue = 'class', palette = 'Set2')"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,16 +459,16 @@
       "metadata": {
         "id": "ezoCps2fiSAz",
         "colab_type": "code",
+        "outputId": "f280203a-9a71-4de3-c40f-7bbd0f04141b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        },
-        "outputId": "f280203a-9a71-4de3-c40f-7bbd0f04141b"
+        }
       },
       "source": [
         "sns.boxplot(data = data, orient = 'h')"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
